# webb-rs

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml  lint.yml
babyjub/: Cargo.toml
bridge-proofs/: Cargo.toml
bridge-proofs/src/: lib.rs
bridge-proofs/src/evm/: mod.rs  tests.rs  types.rs  verify_trie_proof.rs
chain-state/hermes/: state.json
ci/: test.bash
circom-proving/: Cargo.toml
circom-proving/src/: lib.rs  types.rs
contracts/: Anchor.json
contracts/darkwebb/: Anchor.json  Anchor2.json  AnchorProxy.json  Bridge.json  GovernanceBravoDelegate.json  WEBBAnchor2.json
contracts/protocol-dkg/: SigningRules.json
contracts/protocol-solidity/: AnchorBase.json  AnchorHandler.json  AnchorProxy.json  Bridge.json  ERC20PresetMinterPauser.json  FixedDepositAnchor.json  FungibleTokenWrapper.json  GovernedTokenWrapper.json  MultiAssetVAnchor.json  MultiAssetVAnchorBatchTree.json  MultiAssetVAnchorProxy.json  MultiAssetVAnchorTree.json  OpenVAnchor.json  OpenVAnchorBase.json  PoseidonHasher.json  PoseidonT3.json  PoseidonT4.json  PoseidonT6.json  ProxiedBatchMerkleTree.json  SignatureBridge.json  TokenWrapper.json  TokenWrapperHandler.json  Treasury.json  TreasuryHandler.json  VAnchor.json  VAnchorBase.json  VAnchorEncodeInputs.json  VAnchorTree.json  VAnchorVerifier.json  Verifier2_16.json  Verifier2_2.json  Verifier8_16.json  Verifier8_2.json
contracts/tangle/: VotableSigningRules.json
contracts/tornado/: Tornado.json
evm-test-utils/: Cargo.toml
evm-test-utils/src/: anvil.rs  deployement_args.rs  errors.rs  lib.rs  local_evm_chain.rs  tests.rs  types.rs  utils.rs  v_bridge.rs
metadata/: dkg-runtime.scale  egg-runtime.scale  protocol-substrate-runtime.scale  tangle-rococo-runtime.scale  tangle-runtime.scale
mimcsponge/: Cargo.toml
mimcsponge/src/: lib.rs
pedersen-hash/: Cargo.toml
pedersen-hash/scripts/: circom_pedersen_hash.js  package.json
pedersen-hash/src/: lib.rs
proposal-derive/: Cargo.toml
proposal-derive/src/: lib.rs
proposals/: Cargo.toml
proposals/src/: de.rs  header.rs  lib.rs  nonce.rs  ser.rs  target_system.rs  traits.rs
proposals/src/proposal/: anchor_update.rs  fee_recipient_update.rs  max_deposit_limit.rs  min_withdrawal_limit.rs  mod.rs  rescue_tokens.rs  resource_id_update.rs  set_treasury_handler.rs  set_verifier.rs  token_add.rs  token_remove.rs  wrapping_fee_update.rs
proposals/src/proposal/cosmwasm/: anchor_update.rs  fee_recipient_update.rs  max_deposit_limit.rs  min_withdrawal_limit.rs  mod.rs  rescue_tokens.rs  resource_id_update.rs  set_treasury_handler.rs  set_verifier.rs  token_add.rs  token_remove.rs  utils.rs  wrapping_fee_update.rs
proposals/src/proposal/evm/: anchor_update.rs  fee_recipient_update.rs  fungible_asset_add_proposal.rs  max_deposit_limit.rs  min_withdrawal_limit.rs  mod.rs  nft_add_proposal.rs  register_fungible_token.rs  register_nft_token.rs  rescue_tokens.rs  resource_id_update.rs  set_daily_withdrawal_limit.rs  set_native_allowed.rs  set_treasury_handler.rs  set_verifier.rs  token_add.rs  token_remove.rs  wrapping_fee_update.rs
proposals/src/proposal/ink/: anchor_update.rs  fee_recipient_update.rs  max_deposit_limit.rs  min_withdrawal_limit.rs  mod.rs  rescue_tokens.rs  resource_id_update.rs  set_treasury_handler.rs  token_add.rs  token_remove.rs  util.rs  wrapping_fee_update.rs
proposals/src/proposal/substrate/: anchor_update.rs  fee_recipient_update.rs  fungible_asset_add_proposal.rs  max_deposit_limit.rs  min_withdrawal_limit.rs  mod.rs  rescue_tokens.rs  resource_id_update.rs  token_add.rs  token_remove.rs  wrapping_fee_update.rs
resource-id/: Cargo.toml  package.json  webpack.config.js
resource-id/src/: lib.rs  tests.rs  utils.rs
resource-id/wasm/: interface.rs
src/: evm.rs  lib.rs  substrate.rs
src/contracts/: anchor.rs
src/evm/: mod.rs  note.rs
src/evm/contract/: anchor.rs  mod.rs
src/evm/contract/darkwebb/: WEBBanchor2.rs  anchor.rs  anchor2.rs  anchor_proxy.rs  bridge.rs  governance_bravo_delegate.rs  mod.rs  webb_anchor2.rs
src/evm/contract/protocol_dkg/: mod.rs  signing_rules.rs
src/evm/contract/protocol_solidity/: anchor_base.rs  anchor_handler.rs  anchor_proxy.rs  bridge.rs  erc20_preset_minter_pauser.rs  fixed_deposit_anchor.rs  fungible_token_wrapper.rs  governed_token_wrapper.rs  masp.rs  masp_proxy.rs  masp_vanchor.rs  masp_vanchor_batch_tree.rs  masp_vanchor_tree.rs  mod.rs  open_vanchor_base.rs  open_variable_anchor.rs  poseidon_hasher.rs  poseidon_t3.rs  poseidon_t4.rs  poseidon_t6.rs  signature_bridge.rs  token_wrapper.rs  token_wrapper_handler.rs  treasury.rs  treasury_handler.rs  vanchor_base.rs  vanchor_encode_inputs.rs  vanchor_verifier.rs  variable_anchor.rs  variable_anchor_tree.rs  verifier_2_16.rs  verifier_2_2.rs  verifier_8_16.rs  verifier_8_2.rs
src/evm/contract/tangle/: mod.rs  votable_signing_rules.rs
src/evm/contract/tornado/: anchor.rs  contract.rs  mod.rs  tornado.rs
src/pallet/: mixer.rs
src/substrate/: dkg_runtime.rs  egg_runtime.rs  mod.rs  protocol_substrate_runtime.rs  tangle_runtime.rs
src/substrate/pallet/: merkle.rs  mod.rs
tests/: dkg.rs
