[workspace.package]
edition = "2021"
authors = ["Webb Developers"]
license = "GPL-3.0"
repository = "https://github.com/webb-tools/webb-rs"
documentation = "https://docs.rs/webb"
homepage = "https://www.webb.tools"

[workspace.dependencies]
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
hex = { version = "0.4", default-features = false }

[package]
name = "webb"
version = "0.5.14"
description = "Webb SDK"
keywords = ["webb", "sdk", "blockchain", "webb-tools"]
include = ["Cargo.toml", "contracts/", "metadata/", "src/**/*.rs", "build.rs", "README.md", "LICENSE"]
build = "build.rs"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }

[workspace]
members = [".", "proposals"]

[dependencies]
# Substrate crates.
scale = { package = "parity-scale-codec", version = "3", default-features = false, optional = true }
scale-info = { workspace = true, optional = true }
subxt = { version = "0.25.0", optional = true }
async-trait = "0.1"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
thiserror = "1.0.38"
hex = { workspace = true }
# EVM crates.
ethers = { version = "=0.17.0", default-features = false, optional = true, features = ["legacy", "abigen"] }
serde = { workspace = true }
serde_json = { version = "1", optional = true }

# Used by ethers (but we need it to be vendored with the lib).
openssl = { version = "0.10", features = ["vendored"], optional = true }

[dev-dependencies]
tokio = { version = "^1", features = ["macros", "rt"] }
anyhow = "^1"
sp-keyring = "7.0.0"

[build-dependencies]
serde_json = "1"
tempfile = "3.3"
ethers = { version = "0.17.0", default-features = false, optional = true, features = ["legacy", "abigen"] }
syn = { version = "1.0.107", optional = true }
scale = { package = "parity-scale-codec", version = "3", default-features = false, optional = true }
frame-metadata = { version = "15.0.0", optional = true, features = ["v14", "std"] }
subxt-codegen = { version = "0.25.0", optional = true }

[features]
default = ["substrate-runtime", "evm-runtime"]
# Main features.
substrate-runtime = ["subxt", "scale", "scale-info"]
evm-runtime = ["ethers", "serde_json"]
# Tests
integration-tests = []
# Build
generate-contracts = ["evm-runtime"]
generate-substrate = ["subxt-codegen", "syn", "frame-metadata", "scale"]
