[workspace.package]
edition = "2021"
authors = ["Webb Developers"]
license = "Apache-2.0"
repository = "https://github.com/webb-tools/webb-rs"
documentation = "https://docs.rs/webb"
homepage = "https://www.webb.tools"
categories = ["cryptography", "api-bindings", "blockchain"]
readme = "README.md"
keywords = ["webb", "sdk", "blockchain", "webb-tools"]

[workspace.dependencies]
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
hex = { version = "0.4", default-features = false }
ethers-core = { version = "2.0.11", default-features = false }
ethers = { version = "=2.0.13", default-features = false, features = ["legacy", "abigen" , "ethers-solc", "etherscan" ] }
thiserror = "1"

[package]
name = "webb"
version = "0.8.4"
description = "Webb SDK"
keywords = ["webb", "sdk", "blockchain", "webb-tools"]
include = ["Cargo.toml", "contracts/", "metadata/", "src/**/*.rs", "build.rs"]
build = "build.rs"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }

[workspace]
members = [".", "proposals", "proposal-derive", "bridge-proofs", "evm-test-utils", "circom-proving"]

[dependencies]
async-trait = "0.1"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
thiserror = "1.0.38"
hex = { workspace = true }
# EVM crates.
ethers = { workspace = true, optional = true, features = ["legacy", "abigen", "ethers-solc", "etherscan"] }
serde = { workspace = true }
serde_json = { version = "^1.0.111", optional = true }

# Used by ethers (but we need it to be vendored with the lib).
openssl = { version = "0.10", features = ["vendored"], optional = true }

[dev-dependencies]
tokio = { version = "^1", features = ["macros", "rt"] }
anyhow = "^1"

[build-dependencies]
prettyplease = "0.2"
serde_json = "^1.0.111"
tempfile = "3.3"
ethers = { workspace = true, default-features = false, optional = true, features = ["legacy", "abigen", "ethers-solc", "etherscan"] }
syn = { version = "2", features = ["full", "parsing"], optional = true }

[features]
default = ["evm-runtime"]
evm-runtime = ["ethers", "serde_json"]
# Tests
integration-tests = []
# Build
generate-contracts = ["evm-runtime", "syn"]

