[package]
name = "bridge-proofs"
version = "0.1.0"
edition = "2021"

[dependencies]
scale-codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, optional = false, features = ["derive", "max-encoded-len"] }
webb-proposals = { path = "../proposals", default-features = true }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
trie-eip1186 = { git = "https://github.com/paritytech/trie.git" }
rlp = "0.5.1"
serde-rlp = "0.1.4"
serde_json = "1.0.83"
serde = "1.0.143"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
hex = "0.4.3"
