[package]
name = "bridge-proofs"
version = "0.1.0"
edition = "2021"

[dependencies]
scale-codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-io = { version = "6.0.0", default-features = false }
webb-proposals = { path = "../proposals", default-features = true, features = ["scale"]}
ethereum = { version = "0.12.0", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.13.1", default-features = false, features = ["rlp", "codec", "num-traits"], optional = true }
rlp = { version = "0.5.1", default-features = false }
tiny-keccak = { version = "2.0.0", default-features = false, features = ["keccak"] }
rlp-derive = { version = "0.1.0", default-features = false }

serde_json = { version = "1.0.83", optional = true }
serde = { version = "1.0.143", optional = true }
serde-rlp = "0.1.4"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs" }

[features]
default = ["std"]
std = [
    "sp-io/std",
    "scale-codec/std",
    "scale-info/std",
    "webb-proposals/std",
    "ethereum/std",
    "ethereum-types",
    "serde",
    "serde_json",
]
