[package]
name = "webb-evm-test-utils"
version = "0.1.0"
description = "Webb Protocol's EVM test utils (part of webb-sdk)"
categories = ["blockchain", "utils"]
keywords = ["webb", "test", "evm-utils", "utils"]
readme = "../README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }

[dependencies]
futures = "0.3"
nix = { version = "0.27", features = ["signal"] }
hex = { workspace = true }
webb-proposals = { path = "../proposals", default-features = false, features = ["std", "evm"] }
webb = { path = "../", default-features = false, features = ["evm-runtime"] }
tokio = { version = "1", features = ["time"] }
thiserror = { workspace = true }
typed-builder = { version = "0.15", default-features = false }

[dev-dependencies]
tokio = { version = "^1", features = ["macros", "rt"] }
tempfile = "3.3"
