[package]
name = "webb-evm-test-utils"
version = "0.1.0"
description = "Webb Protocol's EVM test utils (part of webb-sdk)"
categories = ["blockchain", "utils"]
keywords = ["webb", "test", "evm-utils", "utils"]
readme = "../README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }

[dependencies]
futures = "0.3"
nix = { version = "0.27", features = ["signal"] }
hex = { workspace = true }
webb-proposals = { path = "../proposals", default-features = false, features = ["std", "evm"] }
webb = { path = "../", default-features = false, features = ["evm-runtime"] }
tokio = { version = "1", features = ["time"] }
thiserror = { workspace = true }
typed-builder = { version = "0.15", default-features = false }
scale-codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ["derive", "max-encoded-len"] }
tempfile = "^3.3"
serde = { workspace = true }

# arkworks related deps
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-circom = { git = "https://github.com/vacp2p/ark-circom", branch = "wasm", default-features = false, features = ["circom-2"] }
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", features = ["parallel"] }
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = ["derive"] }
ark-std = { version = "^0.3.0", default-features = false }
arkworks-setups = { version = "1.2.1", features = ["r1cs"], default-features = false }
arkworks-native-gadgets = { version = "1.2.0", default-features = false }
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }
rand = "0.8.4"

# For ark-circom
cfg-if = "1.0"
color-eyre = "0.6.1"
num-traits = "0.2.11"
once_cell = "1.14.0"
serde_json = "1.0.48"
wasmer = { version = "2.3.0", default-features = false, features = ["sys-default"]}
circom-proving = { path = "../circom-proving", default-features = false }

[dev-dependencies]
tokio = { version = "^1", features = ["macros", "rt"] }
tempfile = "3.3"
