[package]
name = "pedersen-hash"
version = "0.1.0"
edition = "2018"

[dependencies]
ark-ff = { version = "^0.3.0", default-features = true }
ark-crypto-primitives = { version = "^0.3.0", default-features = true, features = [ "r1cs" ] }
ark-ed-on-bn254 = { version = "^0.3.0", default-features = true, features = [ "r1cs" ] }
rand_chacha = { version = "^0.3", default-features = false }

[dev-dependencies]
hex = { version = "0.4", default-features = false }
