[package]
name = "webb-proposal-derive"
version = "0.1.0"
description = "Webb Protocol Proposals derive macro"
categories = ["encoding", "no-std"]
keywords = ["webb", "proposals", "protocol", "blockchain", "macro"]
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }

[lib]
proc-macro = true

[dependencies]
ethers-core = { workspace = true }
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[features]
default = ["std"]
std = []
