[package]
name = "webb-proposals"
version = "0.7.0"
description = "Webb Protocol Proposals Specification & Implementation (part of webb-rs SDK)"
categories = ["encoding", "no-std"]
keywords = ["webb", "proposals", "protocol", "blockchain"]
readme = "../README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }

[dependencies]
scale-codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, optional = true, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, optional = true }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", optional = true }
num-traits = { version = "0.2.15", default-features = false }
typed-builder = { version = "0.15", default-features = false, optional = true }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
serde = { workspace = true, optional = true }
hex = { workspace = true }
proposal-derive = { path = "../proposal-derive" }
thiserror = { workspace = true }

[dev-dependencies]
hex-literal = "0.4"
hex = { workspace = true }
toml = { version = "0.7.2" }

[features]
default = ["std", "evm", "substrate", "scale", "ink"]
std = ["scale-codec/std", "scale-info/std", "num-traits/std", "serde", "hex/std", "frame-support/std"]
scale = ["scale-codec", "scale-info/derive"]
evm = []
substrate = ["scale", "typed-builder", "frame-support", "serde"]
ink = ["scale", "typed-builder"]
